# canvaAI

./: .gitignore  README.md  pyproject.toml  run.bat
src/canvaai/: __init__.py  __main__.py  cli.py  logger.py
src/canvaai/constant/: api.py  colors.py
src/canvaai/request/: curl.py  token.py
